# foreign-whispers

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.tts  LICENSE  Makefile  NOTICE  README.md  docker-compose.yml  packages.txt  pyproject.toml  requirements.txt  tts_es.py  video_registry.yml
api/src/: main.py
api/src/core/: config.py  dependencies.py  video_registry.py
api/src/db/: engine.py  models.py
api/src/inference/: __init__.py  tts_remote.py
api/src/routers/: diarize.py  download.py  eval.py  stitch.py  transcribe.py  translate.py  tts.py
api/src/schemas/: __init__.py  diarize.py  download.py  eval.py  pipeline.py  stitch.py  transcribe.py  translate.py  tts.py
api/src/services/: alignment_service.py  download_service.py  stitch_engine.py  stitch_service.py  storage_service.py  transcription_service.py  translation_engine.py  translation_service.py  tts_engine.py  tts_service.py
docs/: student-problem-statements.md  tts-temporal-alignment-research.md
docs/superpowers/plans/: 2026-03-16-docker-compose-profiles.md  2026-03-18-foreign-whispers-library.md
docs/superpowers/specs/: 2026-03-17-tts-temporal-alignment-design.md  2026-03-19-studio-layout-design.md
foreign_whispers/: __init__.py  alignment.py  backends.py  client.py  diarization.py  evaluation.py  reranking.py  vad.py  voice_resolution.py
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/public/: videos.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: app-sidebar.tsx  diarization-accordion.tsx  dubbing-method-accordion.tsx  pipeline-cards.tsx  pipeline-status-bar.tsx  pipeline-table.tsx  settings-dialog.tsx  studio-layout.tsx  transcript-view.tsx  translation-view.tsx  video-canvas.tsx  video-player.tsx  voice-cloning-accordion.tsx
frontend/src/contexts/: studio-settings-context.tsx
frontend/src/hooks/: use-pipeline.ts
frontend/src/lib/: api.ts  config-id.ts  types.ts  utils.ts
notebooks/: foreign_whispers_pipeline.ipynb
notebooks/alignment_integration/: alignment_integration.ipynb
notebooks/diarization_integration/: diarization_integration.ipynb
notebooks/download_integration/: download_integration.ipynb
notebooks/pipeline_end_to_end/: pipeline_end_to_end.ipynb
notebooks/stitch_integration/: stitch_integration.ipynb
notebooks/transcription_integration/: transcription_integration.ipynb
notebooks/translation_integration/: translation_integration.ipynb
notebooks/tts_integration/: tts_integration.ipynb
tests/: test_agents.py  test_alignment.py  test_alignment_service.py  test_api_scaffold.py  test_backends.py  test_db_models.py  test_diarization.py  test_docker_compose.py  test_download_router.py  test_eval_router.py  test_evaluation.py  test_fastapi_skeleton.py  test_imagemagick.py  test_inference.py  test_path_portability.py  test_schemas.py  test_services.py  test_stitch_router.py  test_storage_service.py  test_transcribe_router.py  test_translate_router.py  test_translation_service_rerank.py  test_tts_alignment_wire.py  test_tts_baseline_flag.py  test_tts_es.py  test_tts_router.py  test_tts_service_alignment.py  test_vad.py
